debug.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug
spec:
  containers:
  - name: debug
    image: ubuntu:latest
    command:
      - /bin/bash
      - -c
      - "while :; do sleep 10; done"
    workingDir: /root
    tty: true
